--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "pretsc": "rm -rf dist",
     "tsc": "tsc -p .",
     "build": "npm run tsc && node dist/index.js index.js",
-    "prettier": "prettier  --write \"**/*.{js,ts,json}\"",
-    "prettier-check": "prettier \"**/*.{js,ts,json}\" --check",
+    "prettier": "prettier  --write \"**/*.{md,js,ts,json}\"",
+    "prettier-check": "prettier \"**/*.{md,js,ts,json}\" --check",
     "test": "jest test --no-cache"
   },
   "repository": {
