--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "primary-type-checker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.3",
+  "description": "primary type checker for JavaScript",
+  "main": "dist/index.js",
+  "bin": {
+    "ptc": "dist/index.js"
+  },
   "scripts": {
     "pretsc": "rm -rf dist",
     "tsc": "tsc -p .",
-    "build": "npm run tsc && node dist/index.js index.js",
+    "build": "npm run tsc && node dist/index.js test.js",
     "prettier": "prettier  --write \"**/*.{md,js,ts,json}\"",
     "prettier-check": "prettier \"**/*.{md,js,ts,json}\" --check",
     "test": "jest test --no-cache"
@@ -17,13 +20,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/rchaser53/primary-type-checker/issues"
   },
   "homepage": "https://github.com/rchaser53/primary-type-checker#readme",
   "devDependencies": {
-    "@babel/parser": "^7.3.1",
     "@types/commander": "^2.12.2",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
@@ -32,6 +34,7 @@
     "typescript": "^3.2.4"
   },
   "dependencies": {
+    "@babel/parser": "^7.3.1",
     "commander": "^2.19.0"
   }
 }
