--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "npm run tsc && node dist/index.js test.js",
     "prettier": "prettier  --write \"**/*.{md,js,ts,json}\"",
     "prettier-check": "prettier \"**/*.{md,js,ts,json}\" --check",
-    "test": "jest test --no-cache"
+    "test": "jest test --no-cache",
+    "prepublishOnly": "npm run tsc && npm run prettier && npm test && add-text-header ./dist/index.js ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@types/commander": "^2.12.2",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "add-text-header": "^0.0.5",
     "jest": "^24.0.0",
     "prettier": "^1.16.0",
     "typescript": "^3.2.4"
